Task: Download Webstorm, Git , and creating Github account.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Website demo</title>
+    <title> Tutorial </title>
 </head>
 <body>
-<p>This is a sample page for future references </p>
-<p>My name is miguel by the way</p>
+<h1>Tutorial </h1>
+<p>This little pages would help you to understand how to download webstorm and create a repository in Git and how </p>
+<p>to uploaded to your Github.</p>
 </body>
 </html>
